syntax = "proto3";

package zitadel.settings.v2;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/settings/v2;settings";

import "protoc-gen-openapiv2/options/annotations.proto";

enum ResourceOwnerType {
  RESOURCE_OWNER_TYPE_UNSPECIFIED = 0;
  RESOURCE_OWNER_TYPE_INSTANCE = 1;
  RESOURCE_OWNER_TYPE_ORG = 2;
}

enum TranslationLevelType {
  TRANSLATION_LEVEL_TYPE_UNSPECIFIED = 0;
  TRANSLATION_LEVEL_TYPE_SYSTEM = 1;
  TRANSLATION_LEVEL_TYPE_INSTANCE = 2;
  TRANSLATION_LEVEL_TYPE_ORG = 3;
}